# veracitor

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
examples/: basic_usage.py  finance_rag_check.py
scripts/: generate_corpus.py  generate_qna.py  run_citation_alignment.py  run_ensemble.py  run_llm_judge.py  run_nli_entailment.py  run_self_consistency.py  run_span_coverage.py  sample_for_validation.py  verify_keys.py
tests/: test_api.py  test_benchmark_conservative.py  test_benchmark_strict.py  test_methods.py
veracitor/: __init__.py  checker.py  models.py
veracitor/corpus/: earnings_fetcher.py  edgar_fetcher.py  prospectus_fetcher.py
veracitor/methods/: citation_alignment.py  llm_judge.py  nli_entailment.py  self_consistency.py  span_coverage.py
veracitor/retrieval/: bm25_retriever.py  cag_retriever.py  chunker.py  contextual_retriever.py  reranker.py
