[tool.poetry]
name = "veracitor"
version = "0.1.0"
description = "Hallucination detection for finance RAG systems"
authors = ["Navneet Danturi <navneet@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Algo-nav/veracitor"
repository = "https://github.com/Algo-nav/veracitor"
keywords = ["hallucination", "rag", "finance", "nlp", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.0.0"
requests = "^2.32.0"
python-dotenv = "^1.0.0"

[tool.poetry.extras]
nli = ["transformers", "torch"]
llm = ["anthropic"]
corpus = ["tavily-python"]
all = ["transformers", "torch", "anthropic", "tavily-python"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
build = "^1.0.0"
twine = "^5.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "benchmark: benchmark tests requiring corpus data",
    "benchmark_strict: strict benchmark tests for pre-publish verification",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

